css/main.css
@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:600,400|Playfair+Display);
* {
  font-family: "Josefin Sans", sans-serif; }

html {
  background-color: #e6e6e6;
  overflow-x: hidden; }

.wrapper {
  padding: 0; }

a {
  text-decoration: none;
  color: #2e2e2e; }
  a:visited, a:active {
    color: #2e2e2e; }

.nav-section .nav-fixed {
  z-index: 1000;
  position: fixed;
  transition: all 500ms ease-in-out, background 100ms linear; }

.nav-section .nav-fixed.mobile-nav {
  height: 4rem;
  width: 100%;
  background-color: transparent;
  visibility: visible; }
  .nav-section .nav-fixed.mobile-nav.white {
    background-color: #e6e6e6; }
  .nav-section .nav-fixed.mobile-nav .nav-container {
    margin-top: .75rem;
    position: relative;
    width: 100%; }
    .nav-section .nav-fixed.mobile-nav .nav-container .page-title {
      position: absolute;
      font-size: 1.5rem;
      top: -2.5rem;
      opacity: 0;
      width: 100%;
      visibility: hidden;
      transition: all 0.5s ease 0s;
      color: #2e2e2e; }
      .nav-section .nav-fixed.mobile-nav .nav-container .page-title.active {
        top: -.75rem;
        opacity: 1;
        visibility: visible;
        display: block; }
  .nav-section .nav-fixed.mobile-nav .nav-logo-container {
    text-align: left; }
    .nav-section .nav-fixed.mobile-nav .nav-logo-container .nav-logo {
      width: 4rem;
      margin-left: .75rem; }
  .nav-section .nav-fixed.mobile-nav .hamburger {
    cursor: pointer;
    float: right;
    margin-right: .75rem;
    width: 2rem; }
    .nav-section .nav-fixed.mobile-nav .hamburger div {
      border: 1px solid #2e2e2e;
      border-radius: .125rem;
      margin-top: .5rem;
      width: 90%;
      height: 0rem;
      transition: all 0.5s ease 0s; }
    .nav-section .nav-fixed.mobile-nav .hamburger.open div:first-child {
      -webkit-transform: rotate(225deg) translate(-0.5rem, -0.4rem) scale(0.8, 0.8);
              transform: rotate(225deg) translate(-0.5rem, -0.4rem) scale(0.8, 0.8); }
    .nav-section .nav-fixed.mobile-nav .hamburger.open div:nth-child(2) {
      width: 100%;
      height: 2rem;
      border-radius: 50%;
      -webkit-transform: rotate(360deg) translate(0, -1rem);
              transform: rotate(360deg) translate(0, -1rem); }
    .nav-section .nav-fixed.mobile-nav .hamburger.open div:last-child {
      -webkit-transform: rotate(315deg) translate(1.9rem, -1.8rem) scale(0.8, 0.8);
              transform: rotate(315deg) translate(1.9rem, -1.8rem) scale(0.8, 0.8); }
  .nav-section .nav-fixed.mobile-nav .m {
    margin-left: -.75rem;
    padding-right: .75rem; }
    .nav-section .nav-fixed.mobile-nav .m .button {
      background-color: blue;
      width: 100%;
      height: 100%; }
  .nav-section .nav-fixed.mobile-nav .nav-drop-menu {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    width: 100%;
    top: 0;
    background-color: #e6e6e6;
    border-top: 3px solid #b3b3b3;
    transition: all 0.5s ease 0s, visibility 0s linear 0.5s; }
    .nav-section .nav-fixed.mobile-nav .nav-drop-menu.open {
      visibility: visible;
      top: 100%;
      opacity: 1;
      transition-delay: 0s; }
    .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item {
      height: 5rem;
      padding: .25rem 0;
      cursor: pointer;
      width: 100%;
      text-align: center;
      display: inline-block;
      vertical-align: top;
      transition: all 500ms ease-in-out; }
      .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item:hover {
        background-color: #cdcdcd; }
      .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item:active {
        background-color: #b3b3b3; }
      .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item p {
        font-size: 1.5rem; }
      .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item span {
        display: inline-block;
        opacity: 0;
        width: 1rem;
        border: 3px solid #e6e6e6;
        border-top: none;
        border-bottom: none;
        height: 1.5rem;
        position: relative;
        top: -3.35rem;
        transition: all 500ms ease-in-out; }
        .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item span:nth-child(2) {
          left: -6.5rem;
          border-right: 0; }
        .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item span:last-child {
          right: -6.5rem;
          border-left: 0; }
      .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item.selected {
        background-color: #cdcdcd;
        transition: all 500ms ease-in-out; }
        .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item.selected span {
          opacity: 1;
          transition: all 500ms ease-in-out; }
          .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item.selected span:nth-child(2) {
            left: -2.5rem; }
          .nav-section .nav-fixed.mobile-nav .nav-drop-menu .nav-item.selected span:last-child {
            right: -2.5rem; }

.nav-section .nav-fixed.desktop-nav {
  height: 100%;
  width: 5rem;
  background-color: #2e2e2e;
  border-right: 4px solid #e6e6e6;
  margin-left: -100px; }
  .nav-section .nav-fixed.desktop-nav .logo-row, .nav-section .nav-fixed.desktop-nav .hamburger-row {
    height: 25%; }
  .nav-section .nav-fixed.desktop-nav .logo-row .nav-logo-container .nav-logo {
    width: 80%; }
  .nav-section .nav-fixed.desktop-nav .title-row {
    height: 50%; }
    .nav-section .nav-fixed.desktop-nav .title-row .title-container {
      -webkit-transform: rotate(-90deg);
              transform: rotate(-90deg); }
      .nav-section .nav-fixed.desktop-nav .title-row .title-container .page-title {
        position: absolute;
        margin: -.75rem 0;
        font-size: 1.5rem;
        left: 5.5rem;
        opacity: 0;
        display: inline;
        width: 25%;
        visibility: hidden;
        transition: all 0.5s ease 0s;
        color: #e6e6e6; }
/* ... */

